--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Boiler</title>
+        <title>Watch Vine!</title>
 
         <meta charset="utf-8">
         
@@ -12,6 +12,6 @@
         <script src='./js/main.js' type='text/javascript'></script>
     </head>
     <body>
-        
+        <div id="promo">Huh? <a href="https://github.com/chrisallick/WatchVine">https://github.com/chrisallick/WatchVine</a></div>
     </body>
 </html>
