--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <script src='./js/main.js' type='text/javascript'></script>
     </head>
     <body>
-        <div id="promo">Huh? <a href="https://github.com/chrisallick/WatchVine">https://github.com/chrisallick/WatchVine</a></div>
+        <div id="promo">Huh? <a target="_blank" href="https://github.com/chrisallick/WatchVine">https://github.com/chrisallick/WatchVine</a></div>
     </body>
 </html>
